<resources>
    <string name="app_name" translatable="false">Taplor</string>
    <string name="signin_other_error">There was
        // an issue with sign-in, please try again later.</string>
    <string name="signin_failure">Unable to sign in</string>

    <string name="ad_app_id" translatable="false">ca-app-pub-7869316695770647~7587855107</string>
    <string name="banner_ad_id" translatable="false">ca-app-pub-7869316695770647/6003310698</string>
    <string name="interstitial_ad_id" translatable="false">ca-app-pub-7869316695770647/9475651841</string>
    <string name="native_ad_id" translatable="false">ca-app-pub-7869316695770647/6835209898</string>
    <!--Home Screen-->
    <string name="easy">Beginner</string>
    <string name="medium">Intermediate</string>
    <string name="hard">Advanced</string>
    <string name="how_to_play">How to Play?</string>
    <!--Colors Popup-->
    <string name="color_guide">Color Guide</string>
    <!--Premium Popup-->
    <string name="aborted">Transaction Aborted</string>
    <string name="thanks">Thanks for the purchase</string>
    <string name="get_premium">Upgrade Plans</string>
    <string name="premium_1">Premium 1</string>
    <string name="_1_extra_freezer_available">1 extra Timeout available</string>
    <string name="premium_2">Premium 2</string>
    <string name="_2_extra_freezer_available">2 extra Timeouts available</string>
    <string name="premium_3">Premium 3</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="grand_plan">Grand Plan</string>
    <string name="remove_ads_3_extra_freezer_available">Remove ADs + 3 extra Timeouts available</string>
    <string name="note">Note : Purchase of plan will invalidate the current plan.</string>
    <!--About Game Popup-->
    <string name="developer_details">By\nRiseApps\n@riseandroidapps</string>
    <string name="credits">Credits</string>
    <string name="share">Share</string>
    <string name="review">Review</string>
    <string name="Version">v 1.0.0.6</string>
    <!--Game Over PopUp-->
    <string name="game_over">GAME OVER</string>
    <string name="your_score">Your Concentration Score</string>
    <string name="see_leaderboard">See Leaderboard</string>
    <string name="try_again">Try Again</string>
    <string name="share_score">Share Score</string>
    <!--Demo-->
    <string name="app_walk1">You get 5 seconds to answer correctly.\n\n This time reduces as you proceed to score higher.</string>
    <string name="app_walk2">Take a Timeout of 5 seconds each.\n You can score or rest during a timeout without worrying about running out.</string>
    <string name="app_walk3">Objective : Tap the star containing the name of the background color.For example in this case,background color name is </string>
    <string name="this_is_only_the_demo_feel_free_to_practise_here_anytime">Scores made here are just for practise and would not reflect on the Leaderboards.</string>
    <!--Game-->
    <string name="already_paused">Already in a Timeout</string>
    <string name="no_freezers_left">No Timeouts</string>
    <string name="timer_paused">5 seconds timeout</string>
    <string name="time_freezers">Timeouts :</string>
    <string name="time_freezers_3">Timeouts : 3</string>
    <string name="timer_reduced">Timer Reduced to </string>
    <string name="score">Score</string>
    <string name="time_freezers_5">Timeouts : 5</string>
    <string name="correct_answer">Correct Answer :</string>
    <string name="time_freezers_4">Timeouts : 4</string>
    <string name="time_freezers_6">Timeouts : 6</string>
    <string name="translation_help_sub">Help us translate the app to your language and get your name featured here.</string>
    <string name="warning">Not connected to Internet.\nYour High score won\'t be saved</string>
</resources>
