<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.riseapps.taplor.View.MainActivity"
    android:background="@drawable/gradient">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:fontFamily="@font/font2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.3">

        <Button
            android:id="@+id/easy"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/card_round"
            android:foreground="?selectableItemBackgroundBorderless"
            android:onClick="launchEasyLevel"
            android:text="@string/easy"
            android:fontFamily="@font/font1"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/medium"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/card_round"
            android:foreground="?selectableItemBackgroundBorderless"
            android:onClick="launchMediumLevel"
            android:text="@string/medium"
            android:fontFamily="@font/font1"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/hard"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/card_round"
            android:foreground="?selectableItemBackgroundBorderless"
            android:onClick="launchHardLevel"
            android:text="@string/hard"
            android:fontFamily="@font/font1"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/premium_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:visibility="gone">

        <include layout="@layout/premium_dialog" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:visibility="gone">

        <include layout="@layout/about_game" />

    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/imagebuttonbackground"
        android:onClick="openRanking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/achievement"
        app:srcCompat="@drawable/ic_ranking" />

    <ImageButton
        android:id="@+id/achievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/imagebuttonbackground"
        android:onClick="openAchievement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:srcCompat="@drawable/ic_achievement" />

    <ImageButton
        android:id="@+id/purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/imagebuttonbackground"
        android:onClick="openPremiumDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:srcCompat="@drawable/ic_money_bag" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/imagebuttonbackground"
        android:onClick="openExportDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/purchase"
        app:srcCompat="@drawable/ic_export"
        android:layout_marginLeft="16dp" />


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/how"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="How to Play?"
        android:textColor="@color/buttonTextColor"
        android:fontFamily="@font/font1"
        app:layout_constraintBottom_toTopOf="@+id/purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:onClick="launchTutorial" />
</android.support.constraint.ConstraintLayout>
